# m2_BlogProject

./: Dockerfile  docker-compose.yml  pyproject.toml
mysite/: db.sqlite3
mysite/blog/: admin.py  forms.py  models.py  serializer.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_comment.py  0003_comment_active_comment_post_alter_comment_user.py  0004_alter_comment_user.py  0005_alter_comment_post.py
mysite/blog/templates/: base.html  login.html  post_detail.html  register.html  sidebar.html
mysite/mysite/: settings.py  urls.py
nginx/: nginx.conf
