[project]
name = "blogproject"
version = "0.1.0"
description = ""
authors = [
    {name = "zq",email = "zq@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "django-crispy-forms (>=2.4,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
